<resources>
    <string name="app_name">Bull\'s Eye</string>
    <string name="home_title">PUT THE BULLSEYE AS CLOSE AS YOU CAN TO</string>
    <string name="home_btn">Hit me !!!</string>
    <string name="min_value_text">0</string>
    <string name="max_value_text">100</string>
    <string name="target_value_text">65</string>
    <string name="result_dialog_title">Result dialog title</string>
    <string name="result_dialog_message">Result dialog message</string>
    <string name="happy_birthday_title">Happy birthday, Quan</string>
    <string name="happy_birthday_from">From Theo Xinh Gai.</string>
    <string name="happy_birthday_content_description">Happy Birthday Content Description</string>
    <string name="title_activity_random_dice">RandomDiceActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="random_rice_title">Random Rice App</string>
    <string name="random_rice_value">0</string>
    <string name="btn_roll">ROLL</string>
    <string name="dice_roller_app_image_description">Dice Roller App Image Description</string>
</resources>
