<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintVertical_bias="0.11"
            android:id="@+id/homeTitle" />

    <TextView
            android:text="@string/target_value_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/targetValue"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/homeTitle"
            app:layout_constraintEnd_toEndOf="@+id/homeTitle"
            app:layout_constraintStart_toStartOf="@+id/homeTitle"
            android:layout_marginTop="36dp" />

    <TextView
            android:text="@string/min_value_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/minValue"
            app:layout_constraintEnd_toStartOf="@+id/seekBar"
            app:layout_constraintTop_toTopOf="@+id/seekBar"
            app:layout_constraintBottom_toBottomOf="@+id/seekBar"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:text="@string/max_value_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/maxValue"
            app:layout_constraintStart_toEndOf="@+id/seekBar"
            app:layout_constraintTop_toTopOf="@+id/seekBar"
            app:layout_constraintBottom_toBottomOf="@+id/seekBar"
            app:layout_constraintEnd_toEndOf="parent" />

    <SeekBar
            android:layout_width="0dp"
            android:layout_height="15dp"
            android:id="@+id/seekBar"
            app:layout_constraintTop_toBottomOf="@+id/targetValue"
            app:layout_constraintStart_toStartOf="@+id/homeTitle"
            app:layout_constraintEnd_toEndOf="@+id/homeTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.196" />

    <Button
            android:text="@string/home_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/homeButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="36dp"
            app:layout_constraintTop_toBottomOf="@+id/seekBar" />

</androidx.constraintlayout.widget.ConstraintLayout>
