<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
            android:text="@string/btn_roll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_roll"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginBottom="244dp"
            app:layout_constraintTop_toBottomOf="@+id/dice_img"
            app:layout_constraintVertical_bias="1.0" />

    <TextView
            android:text="@string/random_rice_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/random_dice_value"
            app:layout_constraintBottom_toTopOf="@+id/btn_roll"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/dice_img" />

    <ImageView
            android:layout_width="110dp"
            android:layout_height="100dp"
            tools:srcCompat="@drawable/dice_1"
            android:id="@+id/dice_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.078"
            android:contentDescription="@string/dice_roller_app_image_description"
            tools:visibility="visible"
            android:visibility="visible"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/dice_1" />

</androidx.constraintlayout.widget.ConstraintLayout>
